--- a/index.html
+++ b/index.html
@@ -70,19 +70,21 @@
     <section id="home">
         <div
             class="intro container-fluid d-flex flex-column align-items-center justify-content-center text-center shadow-text">
-            <p class="text-uppercase display-4">2025 Beartooth Mountain Conference</p>
-            <p class="text-capitalize fs-2">an inspirational and life-changing weekend!</p>
-            <p class="text-capitalize fs-4 mt-0">July 19-21, 2025</p>
+            <p class="text-uppercase display-4 mb-0 main-title">2025 Beartooth Mountain Conference</p>
+            <p class="text-capitalize fs-2 mt-0 main-sub-title">an inspirational and life-changing weekend!</p>
+            <div class="mt-4">
+                <a href="#about" class="button bmc-btn">about</a>
+                <a href="#registration" class="button bmc-btn bmc-register-btn">register</a>
+            </div>
         </div>
     </section>
     <!---------------------
     INTRO end / ABOUT begin
     ---------------------->
     <section id="about" class="pt-5">
-        <div class="container d-sm-block d-md-flex justify-content-between align-items-baseline">
+        <div class="container d-sm-block d-md-flex justify-content-between align-items-baseline pt-5">
             <div class="col-sm-12 col-md-8">
-                
-                <p class="display-5 mt-5 pt-5">About</p>
+                <p class="display-5">About</p>
                 <p><strong>Beartooth Mountain Conference</strong> is a gathering of AA and Al-Anon participants
                     exploring the joy of living in an
                     atmosphere of fun and fellowship. This gathering will enhance your spiritual growth through speakers
@@ -122,6 +124,7 @@
                 </ul>
             </div>
         </div>
+        <div class="row btn-container py-5 mt-2 text-center"><a href="#registration" class="mx-auto d-inline-block fs-4">continue to registration!</a></div>
 
         <!-- Display Past Speakers Modal -->
         <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
@@ -148,9 +151,9 @@
     ABOUT End / REGISTRATION begin
     ----------------->
     <section id="registration" class="pt-5">
-        <div class="container d-sm-block d-md-flex justify-content-between align-items-baseline">
+        <div class="container d-sm-block d-md-flex justify-content-between align-items-baseline pt-5">
             <div class="col-sm-12 col-md-8">
-                <p class="mt-5 pt-5 display-5">Register Now!</p>
+                <p class="display-5">Register Now!</p>
                 <p><strong>Place Holder Text...</strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum blanditiis nam et non natus at officiis ipsa earum quos exercitationem modi, esse cumque magnam laboriosam nihil totam quae voluptate reprehenderit.</p>
             </div>
         </div>
